Fix wrong margin-bottom of spinner

--- a/scss/modules/_modulescards.scss
+++ b/scss/modules/_modulescards.scss
@@ -140,7 +140,7 @@
             margin-left: rem(-2px);
         }
         .onclick {
-            margin-bottom: -10px;
+            margin-bottom: -7px;
         }
     }
 
